--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -57,6 +57,8 @@
 }
 
 .features-section {
+  overflow: visble;
+  position: relative;
   display: flex;
   justify-content: center;
   gap: 24px;
@@ -66,6 +68,8 @@
 }
 
 .feature-card {
+  overflow: visble;
+  position: relative;
   background-color: var(--bg-color);
   border: 1px solid var(--border-color);
   border-radius: 12px;
@@ -82,13 +86,14 @@
 }
 
 .feature-card img {
-  width: 48px;
-  height: 48px;
   margin-bottom: 12px;
 }
 
 .feature-icon {
-  fill: var(--border-color, border-default);
+  display: inline-block;
+  width: 48px;
+  height: 48px;
+  color: var(--border-color, border-default);
 }
 
 @media (max-width: 600px) {
