--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -5,11 +5,11 @@
   --header2-font-size: 1.75rem;
   --body-font-size: 1rem;
   --footer-height: 50px;
-  --bg-color: var(--bg-default, #0e0b1f);
-  --text-color: var(--text-default, #e0d6ff);
-  --accent-color: var(--accent-default, #7f5af0);
-  --secondary-color: var(--secondary-default, #a78bfa);
-  --border-color: var(--border-default, #3c2e6f);
+  --bg-color: var(--bg-default, #2B273F);
+  --text-color: var(--text-default, #F3F0FF);
+  --accent-color: var(--accent-default, #5E4DB2);
+  --secondary-color: var(--secondary-default, #5E4DB2);
+  --border-color: var(--border-default, #8F7EE7);
   --navbar-default: white;
   --bg-default: #2B273F;
   --text-default: #F3F0FF;
