--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -91,9 +91,10 @@
 
 .feature-icon {
   display: inline-block;
-  width: 256px;
-  height: 256px;
+  width: 48px;
+  height: 48px;
   color: var(--border-color, border-default);
+  border: 1px solid red;
 }
 
 @media (max-width: 600px) {
