--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -87,6 +87,8 @@
 
 .feature-icon {
   display: inline-block;
+  width: 256px;
+  height: 256px;
   color: var(--border-color, border-default);
 }
 
